# nscom01-mcos

./: .gitattributes  .gitignore  pom.xml  pyproject.toml  ruff.toml  ty.toml
mco1/: pyproject.toml
mco1/src/file_transfer/: client.py  endpoint.py  packet.py  server.py
mco2/: pyproject.toml
mco2/src/audio_streaming/: rtcp.py  rtp.py
src/file_transfer/: client.py  endpoint.py  packet.py  server.py
src/main/java/seoyunnie/filetransfer/: FileTransfer.java
