[project]
name = "nscom01-mcos"
version = "1.0.0"
requires-python = ">=3.14"
authors = [{ name = "Ken Borbe" }, { name = "Raphael Panaligan" }]
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 7 - Inactive",
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/seoyunnie/nscom01-mcos.git"

[dependency-groups]
dev = ["ruff>=0.15.9", "ty>=0.0.28"]

[tool.uv.workspace]
members = ["mco1"]
