[project]
name = "audio-streaming"
version = "1.0.0"
dependencies = ["numpy>=2.4.4", "sounddevice>=0.5.5"]
requires-python = ">=3.14"
authors = [{ name = "Seoyun", email = "seoyun1062@outlook.com" }]
description = ""
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 7 - Inactive",
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/seoyunnie/nscom01-mcos.git"

[project.scripts]
audio-streaming = "audio_streaming:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
